Fixed project image width on mobile

--- a/styles/home.css
+++ b/styles/home.css
@@ -196,6 +196,7 @@
         margin-top: 10vw;
         position: inherit;
         width: 100%;
+        max-width: 100%;
         height: auto;
         display: block;
     }
